# ai-project-management

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STATUS.md  pyproject.toml
.claude/commands/: complete-task.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: INTEGRATION.md  PHILOSOPHY.md
examples/multi-team/: ROLES.yaml
examples/multi-team/backlog/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml  TASK-004.yaml
examples/solo-developer/backlog/: TASK-001.yaml  TASK-002.yaml  TASK-003.yaml
schemas/: metrics-schema.json  roadmap-schema.json  sprint-schema.json  trust-profile-schema.json
src/ai_pm/: __init__.py  __main__.py  cli.py  engine.py  parser.py  validator.py
src/ai_pm/commands/: create-task.md
src/ai_pm/schemas/: roles-schema.json  task-schema.json
src/ai_pm/templates/: ROADMAP.yaml
src/ai_pm/templates/backlog/: TASK-TEMPLATE.yaml
src/ai_pm/templates/sprints/: SPRINT-TEMPLATE.yaml
templates/: METRICS.yaml  ROLES.yaml  TRUST_PROFILE.yaml
tests/: conftest.py  test_cli.py  test_engine.py  test_parser.py  test_schemas.py  test_validator.py
